correção la linha 11 no index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Estamos Estudando</h1>
 <p>Este é o Exemplo HTML</p>
-<p>Uma nova linha no arquivo!</p>
+<p>Esta linha está sofrendo alteração</p>
 
 </body>
 </html>
